installer/build_error.txt
   Compiling eclipse-installer v0.1.0 (/home/moebius/eclipse/installer)
warning: unused import: `std::os::unix::fs::FileTypeExt`
 --> src/validation.rs:5:5
  |
5 | use std::os::unix::fs::FileTypeExt;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `walkdir::WalkDir`
 --> src/distro/preparer.rs:4:5
  |
4 | use walkdir::WalkDir;
  |     ^^^^^^^^^^^^^^^^

warning: unused import: `Path`
 --> src/paths.rs:1:17
  |
1 | use std::path::{Path, PathBuf};
  |                 ^^^^

error[E0277]: `PathBuf` doesn't implement `std::fmt::Display`
  --> src/distro/populator.rs:19:60
   |
19 | ...cuting {}", populate_path))?;
   |           --   ^^^^^^^^^^^^^ `PathBuf` cannot be formatted with the default formatter; call `.display()` on it
   |           |
   |           required by this formatting parameter
   |
   = help: the trait `std::fmt::Display` is not implemented for `PathBuf`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
   = note: call `.display()` or `.to_string_lossy()` to safely print paths, as they may contain non-Unicode data
   = note: this error originates in the macro `$crate::__export::format_args` which comes from the expansion of the macro `format` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused variable: `metadata`
  --> src/direct_installer.rs:25:19
   |
25 | ... if let Ok(metadata) = fs::metadata(...
   |               ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_metadata`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `partition_suffix`
   --> src/direct_installer.rs:275:13
    |
275 | ...   let partition_suffix = if disk.n...
    |           ^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_partition_suffix`

For more information about this error, try `rustc --explain E0277`.
warning: `eclipse-installer` (bin "eclipse-installer") generated 5 warnings
error: could not compile `eclipse-installer` (bin "eclipse-installer") due to 1 previous error; 5 warnings emitted
